updated scripts for training

--- a/notebooks/data_prep.ipynb
+++ b/notebooks/data_prep.ipynb
@@ -470,11 +470,230 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>material_id</th>\n",
+       "      <th>formation_energy_per_atom</th>\n",
+       "      <th>band_gap</th>\n",
+       "      <th>pretty_formula</th>\n",
+       "      <th>e_above_hull</th>\n",
+       "      <th>elements</th>\n",
+       "      <th>cif</th>\n",
+       "      <th>spacegroup.number</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>37228</td>\n",
+       "      <td>mp-1221227</td>\n",
+       "      <td>-1.637460</td>\n",
+       "      <td>0.2133</td>\n",
+       "      <td>Na3MnCoNiO6</td>\n",
+       "      <td>0.043001</td>\n",
+       "      <td>['Co', 'Mn', 'Na', 'Ni', 'O']</td>\n",
+       "      <td># generated using pymatgen\\ndata_Na3MnCoNiO6\\n...</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>19480</td>\n",
+       "      <td>mp-974729</td>\n",
+       "      <td>-0.314759</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>Nd(Al2Cu)4</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>['Al', 'Cu', 'Nd']</td>\n",
+       "      <td># generated using pymatgen\\ndata_Nd(Al2Cu)4\\n_...</td>\n",
+       "      <td>139</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>29624</td>\n",
+       "      <td>mp-1185360</td>\n",
+       "      <td>-0.193761</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>LiMnIr2</td>\n",
+       "      <td>0.018075</td>\n",
+       "      <td>['Ir', 'Li', 'Mn']</td>\n",
+       "      <td># generated using pymatgen\\ndata_LiMnIr2\\n_sym...</td>\n",
+       "      <td>225</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>38633</td>\n",
+       "      <td>mp-1188861</td>\n",
+       "      <td>-0.584694</td>\n",
+       "      <td>3.8556</td>\n",
+       "      <td>LiCSN</td>\n",
+       "      <td>0.048847</td>\n",
+       "      <td>['C', 'Li', 'N', 'S']</td>\n",
+       "      <td># generated using pymatgen\\ndata_LiCSN\\n_symme...</td>\n",
+       "      <td>62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10889</td>\n",
+       "      <td>mp-677272</td>\n",
+       "      <td>-2.474759</td>\n",
+       "      <td>0.4707</td>\n",
+       "      <td>La2EuS4</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>['Eu', 'La', 'S']</td>\n",
+       "      <td># generated using pymatgen\\ndata_La2EuS4\\n_sym...</td>\n",
+       "      <td>122</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45224</th>\n",
+       "      <td>21009</td>\n",
+       "      <td>mp-1023925</td>\n",
+       "      <td>-1.152798</td>\n",
+       "      <td>1.6970</td>\n",
+       "      <td>WS2</td>\n",
+       "      <td>0.001173</td>\n",
+       "      <td>['S', 'W']</td>\n",
+       "      <td># generated using pymatgen\\ndata_WS2\\n_symmetr...</td>\n",
+       "      <td>164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45225</th>\n",
+       "      <td>31626</td>\n",
+       "      <td>mp-1187764</td>\n",
+       "      <td>-0.788772</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>Y2ZnPt</td>\n",
+       "      <td>0.022813</td>\n",
+       "      <td>['Pt', 'Y', 'Zn']</td>\n",
+       "      <td># generated using pymatgen\\ndata_Y2ZnPt\\n_symm...</td>\n",
+       "      <td>225</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45226</th>\n",
+       "      <td>20673</td>\n",
+       "      <td>mp-1219588</td>\n",
+       "      <td>-2.910913</td>\n",
+       "      <td>1.9239</td>\n",
+       "      <td>RbMgCoF6</td>\n",
+       "      <td>0.000710</td>\n",
+       "      <td>['Co', 'F', 'Mg', 'Rb']</td>\n",
+       "      <td># generated using pymatgen\\ndata_RbMgCoF6\\n_sy...</td>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45227</th>\n",
+       "      <td>5349</td>\n",
+       "      <td>mp-3589</td>\n",
+       "      <td>-2.764644</td>\n",
+       "      <td>7.2758</td>\n",
+       "      <td>BPO4</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>['B', 'P', 'O']</td>\n",
+       "      <td># generated using pymatgen\\ndata_BPO4\\n_symmet...</td>\n",
+       "      <td>82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45228</th>\n",
+       "      <td>34318</td>\n",
+       "      <td>mp-1518304</td>\n",
+       "      <td>-3.431822</td>\n",
+       "      <td>2.8763</td>\n",
+       "      <td>BaSrDyNbO6</td>\n",
+       "      <td>0.032056</td>\n",
+       "      <td>['Ba', 'Dy', 'Nb', 'O', 'Sr']</td>\n",
+       "      <td># generated using pymatgen\\ndata_BaSrDyNbO6\\n_...</td>\n",
+       "      <td>216</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>45229 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Unnamed: 0 material_id  formation_energy_per_atom  band_gap  \\\n",
+       "0           37228  mp-1221227                  -1.637460    0.2133   \n",
+       "1           19480   mp-974729                  -0.314759    0.0000   \n",
+       "2           29624  mp-1185360                  -0.193761    0.0000   \n",
+       "3           38633  mp-1188861                  -0.584694    3.8556   \n",
+       "4           10889   mp-677272                  -2.474759    0.4707   \n",
+       "...           ...         ...                        ...       ...   \n",
+       "45224       21009  mp-1023925                  -1.152798    1.6970   \n",
+       "45225       31626  mp-1187764                  -0.788772    0.0000   \n",
+       "45226       20673  mp-1219588                  -2.910913    1.9239   \n",
+       "45227        5349     mp-3589                  -2.764644    7.2758   \n",
+       "45228       34318  mp-1518304                  -3.431822    2.8763   \n",
+       "\n",
+       "      pretty_formula  e_above_hull                       elements  \\\n",
+       "0        Na3MnCoNiO6      0.043001  ['Co', 'Mn', 'Na', 'Ni', 'O']   \n",
+       "1         Nd(Al2Cu)4      0.000000             ['Al', 'Cu', 'Nd']   \n",
+       "2            LiMnIr2      0.018075             ['Ir', 'Li', 'Mn']   \n",
+       "3              LiCSN      0.048847          ['C', 'Li', 'N', 'S']   \n",
+       "4            La2EuS4      0.000000              ['Eu', 'La', 'S']   \n",
+       "...              ...           ...                            ...   \n",
+       "45224            WS2      0.001173                     ['S', 'W']   \n",
+       "45225         Y2ZnPt      0.022813              ['Pt', 'Y', 'Zn']   \n",
+       "45226       RbMgCoF6      0.000710        ['Co', 'F', 'Mg', 'Rb']   \n",
+       "45227           BPO4      0.000000                ['B', 'P', 'O']   \n",
+       "45228     BaSrDyNbO6      0.032056  ['Ba', 'Dy', 'Nb', 'O', 'Sr']   \n",
+       "\n",
+       "                                                     cif  spacegroup.number  \n",
+       "0      # generated using pymatgen\\ndata_Na3MnCoNiO6\\n...                  8  \n",
+       "1      # generated using pymatgen\\ndata_Nd(Al2Cu)4\\n_...                139  \n",
+       "2      # generated using pymatgen\\ndata_LiMnIr2\\n_sym...                225  \n",
+       "3      # generated using pymatgen\\ndata_LiCSN\\n_symme...                 62  \n",
+       "4      # generated using pymatgen\\ndata_La2EuS4\\n_sym...                122  \n",
+       "...                                                  ...                ...  \n",
+       "45224  # generated using pymatgen\\ndata_WS2\\n_symmetr...                164  \n",
+       "45225  # generated using pymatgen\\ndata_Y2ZnPt\\n_symm...                225  \n",
+       "45226  # generated using pymatgen\\ndata_RbMgCoF6\\n_sy...                 74  \n",
+       "45227  # generated using pymatgen\\ndata_BPO4\\n_symmet...                 82  \n",
+       "45228  # generated using pymatgen\\ndata_BaSrDyNbO6\\n_...                216  \n",
+       "\n",
+       "[45229 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "mp = pd.read_csv(\"mp_20\\\\mp20_file.csv\")\n",
+    "import pandas as pd\n",
+    "mp = pd.read_csv(\"../data/mp_20/mp_20.csv\")\n",
     "mp"
    ]
   },
