--- a/notebooks/fine-tune_llama.ipynb
+++ b/notebooks/fine-tune_llama.ipynb
@@ -1218,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1227,280 +1227,12 @@
     "\n",
     "new_data = {\n",
     "    'input': df.apply(create_input, axis=1),\n",
-    "    'output': df['SLICE PLUS']\n",
+    "    'output': df['SLICE']\n",
     "}\n",
     "\n",
     "df_for_llama = pd.DataFrame(new_data)\n",
-    "# df_for_llama.to_csv('../data/df_for_llama_bg_eform_slice.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>input</th>\n",
-       "      <th>output</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>band_gap=0.0 e_form=-0.772252</td>\n",
-       "      <td>Al Al Al Al Ir Ru Ru Ru 0 2 o o o 1 3 o o o 4 ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>band_gap=0.0 e_form=-1.6978815</td>\n",
-       "      <td>Eu Eu Ag Ag Te Te O O 0 5 o o o 0 2 o o o 0 3 ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>band_gap=0.0 e_form=-0.30749863</td>\n",
-       "      <td>Ca Tl Ag 0 2 o + + 0 2 o o + 0 1 o + o 0 1 o o...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>band_gap=0.0 e_form=-0.9342697</td>\n",
-       "      <td>Tm Tm Tm Tm Tm Tm Ge Ge Ge Ge Ge Ge Ir Ir Ir I...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>band_gap=0.0 e_form=-0.5408662</td>\n",
-       "      <td>Eu Eu Al Al Al Al Al Al Al Al Pd Pd 0 9 - o o ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>189875</th>\n",
-       "      <td>band_gap=1.697 e_form=-1.1527983237500006</td>\n",
-       "      <td>W W S S S S 0 3 + o o 0 3 o - o 0 3 o o o 0 5 ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>189876</th>\n",
-       "      <td>band_gap=0.0 e_form=-0.788771730833334</td>\n",
-       "      <td>Y Y Zn Pt 0 2 o + + 0 2 + o + 0 2 + + o 0 2 + ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>189877</th>\n",
-       "      <td>band_gap=1.9239 e_form=-2.9109131874999994</td>\n",
-       "      <td>Rb Rb Mg Mg Co Co F F F F F F F F F F F F 0 9 ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>189878</th>\n",
-       "      <td>band_gap=7.2758 e_form=-2.7646443820833326</td>\n",
-       "      <td>B P O O O O 0 5 o o - 0 4 - o o 0 2 o o o 0 3 ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>189879</th>\n",
-       "      <td>band_gap=2.8763 e_form=-3.431822333666667</td>\n",
-       "      <td>Ba Sr Dy Nb O O O O O O 0 8 - o o 0 8 o - o 0 ...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>189880 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                             input  \\\n",
-       "0                    band_gap=0.0 e_form=-0.772252   \n",
-       "1                   band_gap=0.0 e_form=-1.6978815   \n",
-       "2                  band_gap=0.0 e_form=-0.30749863   \n",
-       "3                   band_gap=0.0 e_form=-0.9342697   \n",
-       "4                   band_gap=0.0 e_form=-0.5408662   \n",
-       "...                                            ...   \n",
-       "189875   band_gap=1.697 e_form=-1.1527983237500006   \n",
-       "189876      band_gap=0.0 e_form=-0.788771730833334   \n",
-       "189877  band_gap=1.9239 e_form=-2.9109131874999994   \n",
-       "189878  band_gap=7.2758 e_form=-2.7646443820833326   \n",
-       "189879   band_gap=2.8763 e_form=-3.431822333666667   \n",
-       "\n",
-       "                                                   output  \n",
-       "0       Al Al Al Al Ir Ru Ru Ru 0 2 o o o 1 3 o o o 4 ...  \n",
-       "1       Eu Eu Ag Ag Te Te O O 0 5 o o o 0 2 o o o 0 3 ...  \n",
-       "2       Ca Tl Ag 0 2 o + + 0 2 o o + 0 1 o + o 0 1 o o...  \n",
-       "3       Tm Tm Tm Tm Tm Tm Ge Ge Ge Ge Ge Ge Ir Ir Ir I...  \n",
-       "4       Eu Eu Al Al Al Al Al Al Al Al Pd Pd 0 9 - o o ...  \n",
-       "...                                                   ...  \n",
-       "189875  W W S S S S 0 3 + o o 0 3 o - o 0 3 o o o 0 5 ...  \n",
-       "189876  Y Y Zn Pt 0 2 o + + 0 2 + o + 0 2 + + o 0 2 + ...  \n",
-       "189877  Rb Rb Mg Mg Co Co F F F F F F F F F F F F 0 9 ...  \n",
-       "189878  B P O O O O 0 5 o o - 0 4 - o o 0 2 o o o 0 3 ...  \n",
-       "189879  Ba Sr Dy Nb O O O O O O 0 8 - o o 0 8 o - o 0 ...  \n",
-       "\n",
-       "[189880 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_for_llama"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>input</th>\n",
-       "      <th>output</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>band_gap=0.0 e_form=-0.772252</td>\n",
-       "      <td>Al Al Al Al Ir Ru Ru Ru 0 2 o o o 1 3 o o o 4 ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>band_gap=0.0 e_form=-1.6978815</td>\n",
-       "      <td>Eu Eu Ag Ag Te Te O O 0 5 o o o 0 2 o o o 0 3 ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>band_gap=0.0 e_form=-0.30749863</td>\n",
-       "      <td>Ca Tl Ag 0 2 o + + 0 2 o o + 0 1 o + o 0 1 o o...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>band_gap=0.0 e_form=-0.9342697</td>\n",
-       "      <td>Tm Tm Tm Tm Tm Tm Ge Ge Ge Ge Ge Ge Ir Ir Ir I...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>band_gap=0.0 e_form=-0.5408662</td>\n",
-       "      <td>Eu Eu Al Al Al Al Al Al Al Al Pd Pd 0 9 - o o ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>189875</th>\n",
-       "      <td>band_gap=1.697 e_form=-1.1527983237500006</td>\n",
-       "      <td>W W S S S S 0 3 + o o 0 3 o - o 0 3 o o o 0 5 ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>189876</th>\n",
-       "      <td>band_gap=0.0 e_form=-0.788771730833334</td>\n",
-       "      <td>Y Y Zn Pt 0 2 o + + 0 2 + o + 0 2 + + o 0 2 + ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>189877</th>\n",
-       "      <td>band_gap=1.9239 e_form=-2.9109131874999994</td>\n",
-       "      <td>Rb Rb Mg Mg Co Co F F F F F F F F F F F F 0 9 ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>189878</th>\n",
-       "      <td>band_gap=7.2758 e_form=-2.7646443820833326</td>\n",
-       "      <td>B P O O O O 0 5 o o - 0 4 - o o 0 2 o o o 0 3 ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>189879</th>\n",
-       "      <td>band_gap=2.8763 e_form=-3.431822333666667</td>\n",
-       "      <td>Ba Sr Dy Nb O O O O O O 0 8 - o o 0 8 o - o 0 ...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>189256 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                             input  \\\n",
-       "0                    band_gap=0.0 e_form=-0.772252   \n",
-       "1                   band_gap=0.0 e_form=-1.6978815   \n",
-       "2                  band_gap=0.0 e_form=-0.30749863   \n",
-       "3                   band_gap=0.0 e_form=-0.9342697   \n",
-       "4                   band_gap=0.0 e_form=-0.5408662   \n",
-       "...                                            ...   \n",
-       "189875   band_gap=1.697 e_form=-1.1527983237500006   \n",
-       "189876      band_gap=0.0 e_form=-0.788771730833334   \n",
-       "189877  band_gap=1.9239 e_form=-2.9109131874999994   \n",
-       "189878  band_gap=7.2758 e_form=-2.7646443820833326   \n",
-       "189879   band_gap=2.8763 e_form=-3.431822333666667   \n",
-       "\n",
-       "                                                   output  \n",
-       "0       Al Al Al Al Ir Ru Ru Ru 0 2 o o o 1 3 o o o 4 ...  \n",
-       "1       Eu Eu Ag Ag Te Te O O 0 5 o o o 0 2 o o o 0 3 ...  \n",
-       "2       Ca Tl Ag 0 2 o + + 0 2 o o + 0 1 o + o 0 1 o o...  \n",
-       "3       Tm Tm Tm Tm Tm Tm Ge Ge Ge Ge Ge Ge Ir Ir Ir I...  \n",
-       "4       Eu Eu Al Al Al Al Al Al Al Al Pd Pd 0 9 - o o ...  \n",
-       "...                                                   ...  \n",
-       "189875  W W S S S S 0 3 + o o 0 3 o - o 0 3 o o o 0 5 ...  \n",
-       "189876  Y Y Zn Pt 0 2 o + + 0 2 + o + 0 2 + + o 0 2 + ...  \n",
-       "189877  Rb Rb Mg Mg Co Co F F F F F F F F F F F F 0 9 ...  \n",
-       "189878  B P O O O O 0 5 o o - 0 4 - o o 0 2 o o o 0 3 ...  \n",
-       "189879  Ba Sr Dy Nb O O O O O O 0 8 - o o 0 8 o - o 0 ...  \n",
-       "\n",
-       "[189256 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_for_llama.dropna()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_for_llama.to_csv('../data/df_for_llama_bg_eform_slice+.csv', index=False)"
+    "df_for_llama = df_for_llama.dropna()\n",
+    "df_for_llama.to_csv('../data/df_for_llama_bg_eform_slice.csv', index=False)"
    ]
   },
   {
