new scripts for training llama

--- a/notebooks/fine-tune_llama.ipynb
+++ b/notebooks/fine-tune_llama.ipynb
@@ -191,14 +191,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_17888\\678387782.py:2: DtypeWarning: Columns (2,3,4,5,6,9,19,20,23,27,35,37,38,40,41,42,43,44,45,46,47,48,49,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,79,80,81,82,83,84,85,87,88,90,91,92,93,94,95) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_16272\\678387782.py:2: DtypeWarning: Columns (2,3,4,5,6,9,19,20,23,27,35,37,38,40,41,42,43,44,45,46,47,48,49,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,79,80,81,82,83,84,85,87,88,90,91,92,93,94,95) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(\"../data/genCry_columns_slice.csv\")\n"
      ]
     },
@@ -624,7 +624,7 @@
        "[315397 rows x 98 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +667,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1233,6 +1233,216 @@
     "df_for_llama = pd.DataFrame(new_data)\n",
     "df_for_llama = df_for_llama.dropna()\n",
     "df_for_llama.to_csv('../data/df_for_llama_bg_eform_slice.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Датасет успешно создан и разделен на train и validation части!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Функция для создания входных данных\n",
+    "def create_input(row):\n",
+    "    return f\"{row['band_gap_n']} {row['formation_energy']}\"\n",
+    "\n",
+    "# Создание нового датасета\n",
+    "new_data = {\n",
+    "    'input': df.apply(create_input, axis=1),\n",
+    "    'output': df['SLICE']\n",
+    "}\n",
+    "\n",
+    "df_for_llama = pd.DataFrame(new_data)\n",
+    "\n",
+    "# Удаление строк с пропущенными значениями\n",
+    "df_for_llama = df_for_llama.dropna()\n",
+    "\n",
+    "# Объединение входных и выходных данных в одну строку\n",
+    "df_for_llama['text'] = df_for_llama['input'] + \" -> \" + df_for_llama['output']\n",
+    "\n",
+    "# Разделение на обучающую и валидационную части\n",
+    "train_df, valid_df = train_test_split(df_for_llama, test_size=0.01, random_state=42)\n",
+    "\n",
+    "# Сохранение в CSV файлы\n",
+    "train_df.to_csv('../data/train_gpt2.csv', index=False, header=True)\n",
+    "valid_df.to_csv('../data/validation_gpt2.csv', index=False, header=True)\n",
+    "\n",
+    "print(\"Датасет успешно создан и разделен на train и validation части!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df[['input', 'output']].to_csv('../data/train_gpt2.csv', index=False, header=True)\n",
+    "valid_df[['input', 'output']].to_csv('../data/validation_gpt2.csv', index=False, header=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>input</th>\n",
+       "      <th>output</th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>45948</th>\n",
+       "      <td>0.0 -0.86677605</td>\n",
+       "      <td>Pm Pm Cu Cu P P P P 0 7 o o o 0 4 o - o 0 6 o ...</td>\n",
+       "      <td>0.0 -0.86677605 -&gt; Pm Pm Cu Cu P P P P 0 7 o o...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122423</th>\n",
+       "      <td>1.4468 -2.7483897</td>\n",
+       "      <td>Sr Sr Sr Sr Ce Ce Pd Pd O O O O O O O O O O O ...</td>\n",
+       "      <td>1.4468 -2.7483897 -&gt; Sr Sr Sr Sr Ce Ce Pd Pd O...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62588</th>\n",
+       "      <td>1.6368 -2.5685983</td>\n",
+       "      <td>Sr Ni F F F F F F 0 2 - - - 0 3 - o - 0 4 o - ...</td>\n",
+       "      <td>1.6368 -2.5685983 -&gt; Sr Ni F F F F F F 0 2 - -...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>134960</th>\n",
+       "      <td>0.0 -1.6158209</td>\n",
+       "      <td>Tb Dy Dy Th P P P P 0 1 o o o 0 7 o o - 0 5 o ...</td>\n",
+       "      <td>0.0 -1.6158209 -&gt; Tb Dy Dy Th P P P P 0 1 o o ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41213</th>\n",
+       "      <td>0.0 -1.54441</td>\n",
+       "      <td>Tb Tb Tb Tb Ga Se Se Se 0 4 + + + 0 7 o o o 1 ...</td>\n",
+       "      <td>0.0 -1.54441 -&gt; Tb Tb Tb Tb Ga Se Se Se 0 4 + ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120387</th>\n",
+       "      <td>1.7865 -1.023561</td>\n",
+       "      <td>K K K K K K K K S S S S S S S S S S S S S S S ...</td>\n",
+       "      <td>1.7865 -1.023561 -&gt; K K K K K K K K S S S S S ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104122</th>\n",
+       "      <td>0.0 -0.3508561</td>\n",
+       "      <td>Er Er Er Er Tm Tm Tm Tm In In In In 0 6 o o o ...</td>\n",
+       "      <td>0.0 -0.3508561 -&gt; Er Er Er Er Tm Tm Tm Tm In I...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>132501</th>\n",
+       "      <td>0.0 -0.46315908</td>\n",
+       "      <td>Be Be Be Be Si Si Tc Tc Tc Tc 0 4 + o o 1 6 - ...</td>\n",
+       "      <td>0.0 -0.46315908 -&gt; Be Be Be Be Si Si Tc Tc Tc ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147491</th>\n",
+       "      <td>0.0 -0.2353331587500005</td>\n",
+       "      <td>Ti Ti Ti Nb Nb Nb Sn Sn 0 1 o - o 0 1 - - o 0 ...</td>\n",
+       "      <td>0.0 -0.2353331587500005 -&gt; Ti Ti Ti Nb Nb Nb S...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122480</th>\n",
+       "      <td>2.0 -1.1820483</td>\n",
+       "      <td>Cs Cs Cs Cs Ta Ta Ta Ta Br Br Br Br Br Br Br B...</td>\n",
+       "      <td>2.0 -1.1820483 -&gt; Cs Cs Cs Cs Ta Ta Ta Ta Br B...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>187363 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          input  \\\n",
+       "45948           0.0 -0.86677605   \n",
+       "122423        1.4468 -2.7483897   \n",
+       "62588         1.6368 -2.5685983   \n",
+       "134960           0.0 -1.6158209   \n",
+       "41213              0.0 -1.54441   \n",
+       "...                         ...   \n",
+       "120387         1.7865 -1.023561   \n",
+       "104122           0.0 -0.3508561   \n",
+       "132501          0.0 -0.46315908   \n",
+       "147491  0.0 -0.2353331587500005   \n",
+       "122480           2.0 -1.1820483   \n",
+       "\n",
+       "                                                   output  \\\n",
+       "45948   Pm Pm Cu Cu P P P P 0 7 o o o 0 4 o - o 0 6 o ...   \n",
+       "122423  Sr Sr Sr Sr Ce Ce Pd Pd O O O O O O O O O O O ...   \n",
+       "62588   Sr Ni F F F F F F 0 2 - - - 0 3 - o - 0 4 o - ...   \n",
+       "134960  Tb Dy Dy Th P P P P 0 1 o o o 0 7 o o - 0 5 o ...   \n",
+       "41213   Tb Tb Tb Tb Ga Se Se Se 0 4 + + + 0 7 o o o 1 ...   \n",
+       "...                                                   ...   \n",
+       "120387  K K K K K K K K S S S S S S S S S S S S S S S ...   \n",
+       "104122  Er Er Er Er Tm Tm Tm Tm In In In In 0 6 o o o ...   \n",
+       "132501  Be Be Be Be Si Si Tc Tc Tc Tc 0 4 + o o 1 6 - ...   \n",
+       "147491  Ti Ti Ti Nb Nb Nb Sn Sn 0 1 o - o 0 1 - - o 0 ...   \n",
+       "122480  Cs Cs Cs Cs Ta Ta Ta Ta Br Br Br Br Br Br Br B...   \n",
+       "\n",
+       "                                                     text  \n",
+       "45948   0.0 -0.86677605 -> Pm Pm Cu Cu P P P P 0 7 o o...  \n",
+       "122423  1.4468 -2.7483897 -> Sr Sr Sr Sr Ce Ce Pd Pd O...  \n",
+       "62588   1.6368 -2.5685983 -> Sr Ni F F F F F F 0 2 - -...  \n",
+       "134960  0.0 -1.6158209 -> Tb Dy Dy Th P P P P 0 1 o o ...  \n",
+       "41213   0.0 -1.54441 -> Tb Tb Tb Tb Ga Se Se Se 0 4 + ...  \n",
+       "...                                                   ...  \n",
+       "120387  1.7865 -1.023561 -> K K K K K K K K S S S S S ...  \n",
+       "104122  0.0 -0.3508561 -> Er Er Er Er Tm Tm Tm Tm In I...  \n",
+       "132501  0.0 -0.46315908 -> Be Be Be Be Si Si Tc Tc Tc ...  \n",
+       "147491  0.0 -0.2353331587500005 -> Ti Ti Ti Nb Nb Nb S...  \n",
+       "122480  2.0 -1.1820483 -> Cs Cs Cs Cs Ta Ta Ta Ta Br B...  \n",
+       "\n",
+       "[187363 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df"
    ]
   },
   {
